# lua-knn

./: CMakeLists.txt  README.md  init.lua  knn-0-1.rockspec  knn.cpp  knn_cuda.cu  test.lua
generic/: knn.cpp
